src/objects/Form_SF_182__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Cumulative_Amount__c</fullName>
        <inlineHelpText>Actual Cumulative Amount - This is the sum of all amounts listed within the &quot;Appropriation Fund (Direct Cost)&quot; field of the related SF 182 Training form(s)</inlineHelpText>
        <label>Actual Cumulative Amount</label>
        <summarizedField>SF_182_Training__c.Total_Cumulative_Amount__c</summarizedField>
        <summaryForeignKey>SF_182_Training__c.SF_182__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <inlineHelpText>Age Range - Please select your Age Range</inlineHelpText>
        <label>Age Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>18-24 years old</fullName>
                </value>
                <value>
                    <fullName>25-34 years old</fullName>
                </value>
                <value>
                    <fullName>35-44 years old</fullName>
                </value>
                <value>
                    <fullName>45-54 years old</fullName>
                </value>
                <value>
                    <fullName>55-64 years old</fullName>
                </value>
                <value>
                    <fullName>65-74 years old</fullName>
                </value>
                <value>
                    <fullName>75 years or older</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Am_I_Supervisor_of_Record__c</fullName>
        <description>This is a formula field used for reporting purposes that allows for filtering of records that the current user is the Supervisor.</description>
        <formula>IF (IDP_Supervisor__c = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I Supervisor of Record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Owner:User.FirstName  &amp; &apos;  &apos;  &amp;   Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Applicant Name - Pre-populated with the Name of the employee creating the SF 182</inlineHelpText>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_s_Name__c</fullName>
        <inlineHelpText>Applicant&apos;s Name - Pre-populated with the Name of the employee creating the SF 182</inlineHelpText>
        <label>Applicant&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Amount__c</fullName>
        <inlineHelpText>Cumulative Amount  - This is the sum of all amounts listed within the &quot;Grand Total Training Costs&quot; of the related SF 182 Training form(s)</inlineHelpText>
        <label>Cumulative Amount</label>
        <summarizedField>SF_182_Training__c.Grand_Total_Training_Costs__c</summarizedField>
        <summaryForeignKey>SF_182_Training__c.SF_182__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Division_Formula__c</fullName>
        <formula>Owner:User.Division</formula>
        <label>Division Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <inlineHelpText>Division - The division of the employee</inlineHelpText>
        <label>Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Applicant_need_special_Accomodation__c</fullName>
        <inlineHelpText>Does Applicant need Special Accomodation? -  Indicate &quot;Yes&quot; or &quot;No&quot; if you need any special arrangements for your training (brailing, taping, interpreters, facility accessibility, etc)</inlineHelpText>
        <label>Does Applicant need Special Accomodation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <inlineHelpText>Education Level - Please choose your Education Level</inlineHelpText>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-No formal education or some elementary school</fullName>
                </value>
                <value>
                    <fullName>2-Elementary school completed--no high school</fullName>
                </value>
                <value>
                    <fullName>3-Some high school--did not graduate</fullName>
                </value>
                <value>
                    <fullName>4-High school graduate or certificate of equivalency</fullName>
                </value>
                <value>
                    <fullName>5-Terminal occupational program--did not complete</fullName>
                </value>
                <value>
                    <fullName>6-Terminal occupational program--certificate of completion</fullName>
                </value>
                <value>
                    <fullName>7-Some college--less than one year</fullName>
                </value>
                <value>
                    <fullName>8-One year college</fullName>
                </value>
                <value>
                    <fullName>9-Two years college</fullName>
                </value>
                <value>
                    <fullName>10-Associate Degree</fullName>
                </value>
                <value>
                    <fullName>11-Three years college</fullName>
                </value>
                <value>
                    <fullName>12-Four years college</fullName>
                </value>
                <value>
                    <fullName>13-Bachelor&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>14-Post-Bachelor&apos;s</fullName>
                </value>
                <value>
                    <fullName>15-First professional</fullName>
                </value>
                <value>
                    <fullName>16-Post-first professional</fullName>
                </value>
                <value>
                    <fullName>17-Master&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>18-Post-Master&apos;s</fullName>
                </value>
                <value>
                    <fullName>19-Sixth-year degree</fullName>
                </value>
                <value>
                    <fullName>20-Post-sixth year</fullName>
                </value>
                <value>
                    <fullName>21-Doctorate degree</fullName>
                </value>
                <value>
                    <fullName>22-Post-Doctorate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSA_Organization__c</fullName>
        <formula>CreatedBy.MAJOR_ORG_DESCRIPTION__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GSA Organization - Pre-populated with the Organization of the employee creating the SF 182</inlineHelpText>
        <label>GSA Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <formula>TEXT( IDP__r.Grade__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Grade - Pre-populated with the Grade selected</inlineHelpText>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP_Fiscal_Year__c</fullName>
        <formula>TEXT(IDP__r.Fiscal_Year_pick__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IDP Fiscal Year - Pre-populated with the Fiscal Year of the Related IDP selected</inlineHelpText>
        <label>IDP Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP_Name__c</fullName>
        <formula>TRIM(RIGHT (TEXT(IDP__r.Fiscal_Year_pick__c) ,4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IDP Name FY - The name of the IDP and FY</inlineHelpText>
        <label>IDP Name FY Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP_Supervisor__c</fullName>
        <formula>IDP__r.Supervisor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IDP Supervisor - The name of the Supervisor listed within the corresponding IDP</inlineHelpText>
        <label>IDP Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Related IDP - Please select the approved IDP that is related to this SF 182</inlineHelpText>
        <label>Related IDP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IDP__c.IDP_Status__c</field>
                <operation>equals</operation>
                <value>Approved, Archived</value>
            </filterItems>
            <filterItems>
                <field>IDP__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IDP__c</referenceTo>
        <relationshipLabel>SF 182</relationshipLabel>
        <relationshipName>Form_SF_182</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_describe__c</fullName>
        <inlineHelpText>If Yes, please describe accomodation - If you selected &quot;Yes&quot; for &quot;Does Applicant need Special Accommodation?&quot; please describe what is needed for your training(s)</inlineHelpText>
        <label>If Yes, please describe accomodation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Symbol__c</fullName>
        <formula>IDP__r.office_Symbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Office Symbol - Pre-populated with the Office Symbol of the employee creating the SF 182</inlineHelpText>
        <label>Office Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Telephone__c</fullName>
        <formula>$User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Office Telephone - Pre-populated with the Office Telephone of the employee creating the SF 182</inlineHelpText>
        <label>Office Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <formula>TEXT(IDP__r.Payplan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pay Plan - Pre-populated with the Pay Plan selected within the corresponding IDP</inlineHelpText>
        <label>Pay Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Level__c</fullName>
        <inlineHelpText>Position Level - Please select your Position Level</inlineHelpText>
        <label>Position Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Supervisory</fullName>
                </value>
                <value>
                    <fullName>Supervisory</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Position Title - Pre-populated with the Position Title of the employee creating the SF 182</inlineHelpText>
        <label>Position Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_182_Instructions__c</fullName>
        <defaultValue>&quot;Please complete the fields below; the help text will guide you on what information is needed within each of the fields. Once you have completed the information, select &apos;Save&apos;. After saving, select the &apos;New SF 182 Request&apos; button which will redirect you to where you can complete your request and then submit it for training, approval, registration and payment. IMPORTANT :  You should ONLY create one &apos;SF 182&apos; per IDP, but you should create a new &apos;SF 182 Request&apos; for each activity / training.&quot;</defaultValue>
        <label>Requesting User - SF 182 Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <formula>TEXT( IDP__r.Series__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Series - Pre-populated with the Series selected within the corresponding IDP</inlineHelpText>
        <label>Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Comments__c</fullName>
        <inlineHelpText>Supervisor Comments - This field is only intended for the Supervisor of this SF 182; as the selected Supervisor of this SF 182 please add comments about the user&apos;s SF 182 training(s)</inlineHelpText>
        <label>Supervisor Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_SF_182_Instructions__c</fullName>
        <defaultValue>&quot;The ‘SF 182 Request’ section (located at the bottom of this page) lists all the users requests for the chosen FY.                                Please note that &apos;Estimated Cumulative Amount&apos; field contains the sum of the  &apos;Grand Total Training Costs&apos; from each Training Request(s) and the &apos;Actual Cumulative Amount&apos; field contains the sum of the &apos;Appropriation Fund (Direct Cost)&apos; from each Training Request(s). Costs for training that is rejected, cancelled and no money was obligated or if money was obligated but is refundable will not be included in the totals. You can use the‘Supervisor Comments’ field to provide feedback for the requesting user.&quot;</defaultValue>
        <label>Supervisor - SF 182 Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Email_Address__c</fullName>
        <formula>IDP__r.Employee_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Work Email Address - Pre-populated with the Work Email Address of the employee creating the SF 182</inlineHelpText>
        <label>Work Email Address</label>
        <type>Text</type>
    </fields>
    <label>SF 182</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>IDP_Fiscal_Year__c</columns>
        <columns>Cumulative_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Fiscal_Year_15</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>IDP_Fiscal_Year__c</columns>
        <columns>Cumulative_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDP_Fiscal_Year__c</field>
            <operation>contains</operation>
            <value>15</value>
        </filters>
        <label>Fiscal Year 15</label>
    </listViews>
    <listViews>
        <fullName>Fiscal_Year_16</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>IDP_Fiscal_Year__c</columns>
        <columns>Cumulative_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDP_Fiscal_Year__c</field>
            <operation>contains</operation>
            <value>16</value>
        </filters>
        <label>Fiscal Year 16</label>
    </listViews>
    <listViews>
        <fullName>SF_182</fullName>
        <columns>NAME</columns>
        <columns>IDP__c</columns>
        <columns>IDP_Fiscal_Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>SF 182</label>
    </listViews>
    <nameField>
        <displayFormat>SF182 {0000}</displayFormat>
        <label>SF 182 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF 182</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Approver1_Access__c</fullName>
        <label>Approver1 Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Approver2_Access__c</fullName>
        <label>Approver2 Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Approver3_Access__c</fullName>
        <label>Approver3 Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Approver4_Access__c</fullName>
        <label>Approver4 Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PurchasingTrainingCoordinator_Access__c</fullName>
        <label>PurchasingTrainingCoordinator Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Supervisor_Access__c</fullName>
        <label>Supervisor Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>SF_182_to_check_the_accommodation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Does_Applicant_need_special_Accomodation__c, &apos;Yes&apos;), ISBLANK( If_Yes_please_describe__c ) )</errorConditionFormula>
        <errorDisplayField>If_Yes_please_describe__c</errorDisplayField>
        <errorMessage>Please Enter Description for Accommodation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_the_IDP_to_select</fullName>
        <active>true</active>
        <description>It validates is user selected the Current year IDP and Future year IDP or Previous year IDP.</description>
        <errorConditionFormula>(VALUE(IDP_Name__c)  &lt;  VALUE( Today__c ) )</errorConditionFormula>
        <errorMessage>You have selected Previous IDP. Please select Current or Future year FY year IDP.</errorMessage>
    </validationRules>
</CustomObject>